    - replace rarr with icon
    - Hungarian translation file corrections
2.1.4
    dd February 2, 2016
    - same as 2.1.3
    - tested
    - uploaded to repository
2.1.5
    dd: February 11, 2016
    - Hungarian translation change (ver 2.1.4.1)
    - make some functions pluggable (ver 2.1.4.2)
    -CSS corrections
    -footer: first menu, then copyright.
2.1.6
    dd: February 17:
    - hover has no border (because hover moved the layout)
    ==speed buster project == add style.min.css to the libary.
    ==felxibility project== add action hooks to footer.php (2.1.6.2)
    ==speed buster project == scripts to footer, load font awesome from cdn repository (2.1.6.3)

16.3
    Uploaded: March 16, 2016
    NEW NUMBERING OF VERSIONS: year.month. Ver 16.3 = March, 2016
    (16.2.1) = commit number on GitHub. 
    ==felxibility project== add filter to header in order to enable bloginfo or other after title (2.1.7.0)
    ==screen-reader usability project == add role=region to widgets and change headings to h4 (2.1.7.0)
    ==breadcrumb project== breadcrumb not need aria-label (2.1.7.1)
    ==css optimize project== remove !important from link rules (2.1.7.1)
    !reverse: scripts to footer (2.1.6.3) is removed, should be used in child-theme (2.1.7.3)
    -new primary navigation menu (commit #16.2.1)
    -functions.php function's name was wrong: not included 'manduca' (commit # 16.2.2)
    -translation added (navigation menu)
    - single entry-header positioning correctly (commit#16.2.3)
    -header.txt - clearfix unnecessary (commit#16.2.4)
    -css: styling searchform more flexible (commit # 16.2.5)
    -header image: not link to homepage, since it is only in homepage, small styling +custom header width change (commit# 16.2.6)
    -header apply filters for site title (commit # 16.2.7)
    
16.4
    ==image optimazation == new image size  This commit was accidentaly included in ver 16.3
    -new translation file (po+mo). Both commit #16.4.1



    